examples/test/testpolicy11223.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11223
  namespace: namespace33
spec:
  podSelector:
    matchLabels:
      key40: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value39
          key38: value40
          key13: value29
      podSelector:
        matchLabels:
          key49: value31
